# bayesian-mlx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
blmx/: __init__.py  hmc_mlx.py  nuts_mlx.py
examples/: bayesian_neural_net.py  benchmark_8_schools.py  benchmark_mlx_vs_pymc.py  gaussian_mixture_samplers.py
